--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 </head>
 <body>
 <header>
-  <video class="video-container" autoplay loop muted>
+  <video autoplay class="video-container" loop muted>
     <source src="VoltaVideoLeve.mp4" type="video/mp4">
   </video>
+
   <div class="header-content">
     <br><br><br>
     <p style="text-align:left; align-items: center;">
@@ -39,6 +40,8 @@ Volta logo, volta logo, volta
     </p>
   </div>
 </header>
+
+<script src="app.js" type="text/javascript"></script>
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
